src/tests/snapshots/jsssa__tests__parse__parse error.snap
---
source: src/tests/parse.rs
expression: err
---
Parse error: Expected a semicolon
 --> <anon>:1:7
  |
1 | var ab-cd = 1;
  |       ^


